@@ -102,6 +102,20 @@ end_import
 
 begin_import
 import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|util
+operator|.
+name|CloseableThreadLocal
+import|;
+end_import
+
+begin_import
+import|import
 name|java
 operator|.
 name|io
@@ -227,11 +241,11 @@ name|docStoreOffset
 decl_stmt|;
 DECL|field|fieldsStreamTL
 specifier|private
-name|ThreadLocal
+name|CloseableThreadLocal
 name|fieldsStreamTL
 init|=
 operator|new
-name|ThreadLocal
+name|CloseableThreadLocal
 argument_list|()
 decl_stmt|;
 DECL|method|FieldsReader
@@ -663,37 +677,11 @@ name|close
 argument_list|()
 expr_stmt|;
 block|}
-name|IndexInput
-name|localFieldsStream
-init|=
-operator|(
-name|IndexInput
-operator|)
 name|fieldsStreamTL
-operator|.
-name|get
-argument_list|()
-decl_stmt|;
-if|if
-condition|(
-name|localFieldsStream
-operator|!=
-literal|null
-condition|)
-block|{
-name|localFieldsStream
 operator|.
 name|close
 argument_list|()
 expr_stmt|;
-name|fieldsStreamTL
-operator|.
-name|set
-argument_list|(
-literal|null
-argument_list|)
-expr_stmt|;
-block|}
 name|closed
 operator|=
 literal|true
